3685.	[bug]		"rndc refresh" didn't work correctly with slave
			zones using inline-signing. [RT #35105]

	--- 9.9.5b1 released ---

3683.	[cleanup]	Add a more detailed "not found" message to rndc
			commands which specify a zone name. [RT #35059]

3682.	[bug]		Correct the behavior of rndc retransfer to allow
			inline-signing slave zones to retain NSEC3 parameters
			instead of reverting to NSEC. [RT #34745]

3681.	[port]		Update the Windows build system to support feature
			selection and WIN64 builds.  This is a work in
			progress. [RT #34160]

3679.	[bug]		dig could fail to clean up TCP sockets still
			waiting on connect(). [RT #35074]

3678.	[port]		Update config.guess and config.sub. [RT #35060]

3677.	[bug]		'nsupdate' leaked memory if 'realm' was used multiple
			times.  [RT #35073]

3676.	[bug]		"named-checkconf -z" now checks zones of type
			hint and redirect as well as master. [RT #35046]

3675.	[misc]		Provide a place for third parties to add version
			information for their extensions in the version
			file by setting the EXTENSIONS variable.

3674.	[bug]		RPZ zeroed ttls if the query type was '*'. [RT #35026]

3672.	[func]		Local address can now be specified when using
			dns_client API. [RT #34811]

3671.	[bug]		Don't allow dnssec-importkey overwrite a existing
			non-imported private key.

3670.	[bug]		Address read after free in server side of
			lwres_getrrsetbyname. [RT #29075]

3669.	[port]		freebsd: --with-gssapi needs -lhx509. [RT #35001]

3668.	[bug]		Fix cast in lex.c which could see 0xff treated as eof.
			[RT #34993]

3667.	[test]		dig: add support to keep the TCP socket open between
			successive queries (+[no]keepopen).  [RT #34918]

3665.	[bug]		Failure to release lock on error in receive_secure_db.
			[RT #34944]

3664.	[bug]		Updated OpenSSL PKCS#11 patches to fix active list
			locking and other bugs. [RT #34855]

3663.	[bug]		Address bugs in dns_rdata_fromstruct and
			dns_rdata_tostruct for WKS and ISDN types. [RT #34910]
