@@ -490,10 +490,10 @@
       </varlistentry>
 
       <varlistentry>
-        <term>-R</term>
+        <term>-Q</term>
         <listitem>
           <para>
-	    Remove signatures from keys that no longer exist.
+	    Remove signatures from keys that are no longer active.
           </para>
           <para>
             Normally, when a previously-signed zone is passed as input
@@ -501,9 +501,26 @@
             replaced with a new one, signatures from the old key 
             that are still within their validity period are retained.
 	    This allows the zone to continue to validate with cached
-	    copies of the old DNSKEY RRset.  The <option>-R</option> forces
-            <command>dnssec-signzone</command> to remove all orphaned
-            signatures.
+	    copies of the old DNSKEY RRset.  The <option>-Q</option>
+            forces <command>dnssec-signzone</command> to remove
+            signatures from keys that are no longer active. This
+            enables ZSK rollover using the procedure described in
+            RFC 4641, section 4.2.1.1 ("Pre-Publish Key Rollover").
+          </para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>-R</term>
+        <listitem>
+          <para>
+	    Remove signatures from keys that are no longer published.
+          </para>
+          <para>
+            This option is similar to <option>-Q</option>, except it
+            forces <command>dnssec-signzone</command> to signatures from
+            keys that are no longer published. This enables ZSK rollover
+            using the procedure described in RFC 4641, section 4.2.1.2
+            ("Double Signature Zone Signing Key Rollover").
           </para>
         </listitem>
       </varlistentry>
@@ -766,7 +783,7 @@ db.example.com.signed
         <refentrytitle>dnssec-keygen</refentrytitle><manvolnum>8</manvolnum>
       </citerefentry>,
       <citetitle>BIND 9 Administrator Reference Manual</citetitle>,
-      <citetitle>RFC 4033</citetitle>.
+      <citetitle>RFC 4033</citetitle>, <citetitle>RFC 4641</citetitle>.
     </para>
   </refsect1>
 
